tests/fail/elaboration/unification/mismatch/fun-type-both.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/fun-type-both.fathom:3:43
  │
3 │ fun (A : Type) -> fun (a : A) -> fun (b : a) -> a
  │                                           ^ type mismatch, expected `A`, found `Type`
  │
  = expected `A`
       found `Type`

error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/fun-type-both.fathom:3:49
  │
3 │ fun (A : Type) -> fun (a : A) -> fun (b : a) -> a
  │                                                 ^ type mismatch, expected `A`, found `Type`
  │
  = expected `A`
       found `Type`

'''
